css/style.css
/***************** COMMON *******************/

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
    /* display: inline; */
    /* display: inline-block; */
    /* text-align: center; */
    /* margin: 0 auto; */
}

input:focus,
textarea:focus {
    outline: none;
}

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    background: #fff;
}

.container-top {
    /* background: url(../img/1.jpg) no-repeat center center; */
    background: url(../img/1.webp) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    /* background-size: cover; */
    height: 650px;
}

.wrapper {
    max-width: 1140px;
    margin: 0 auto;
    text-align: center;
    width: 90%;
    padding: 6.5% 0;
    overflow: auto;
}

a:link,
a:visited {
    color: #000000;
}

a {
    text-decoration: none;
}

h1 {
    font-family: 'Crimson Text', serif;
    font-size: 48px;
    font-weight: 400;
    letter-spacing: 1px;
    margin-bottom: 20px;
    text-transform: capitalize;
    text-align: center;
}

h2 {
    font-family: 'Crimson Text', serif;
    font-size: 40px;
    letter-spacing: 1px;
    text-transform: capitalize;
    font-weight: 600;
    text-align: center;
}

h3 {
    font-size: 24px;
    font-weight: 500;
    letter-spacing: 1px;
    color: #333333;
    line-height: 1.5em;
    text-align: left;
    margin: 5% 0 -1% 0;
    text-transform: capitalize;
}

h4 {
    font-size: 14px;
    font-weight: 500;
    letter-spacing: 3px;
}

p {
    letter-spacing: 0.02em;
    line-height: 2em;
    font-size: 18px;
    color: #333333;
    max-width: 750px;
    /* Perfectly sizes the width for optimal reading comfort */
}

h2,
h3,
p,
ul li {
    max-width: 850px;
}

p.section-summary {
    font-size: 36px;
    font-weight: 500;
    line-height: 140%;
    margin: 0;
    color: #000000;
}

p.section-title {
    color: #000000;
    text-transform: capitalize;
    font-weight: 500;
}

ul.nav-main {
    /* padding-top: 3.5%; */
    text-align: center;
    float: right;
}

ul.nav-main.mrg {
    margin-top: 0;
    float: right;
}

img {
    display: block;
    width: 100%;
}

.col-1 {
    width: 8.33%;
}

.col-2 {
    width: 16.66%;
}

.col-3 {
    width: 25%;
}

.col-4 {
    width: 33.33%;
}

.col-5 {
    width: 41.66%;
}

.col-6 {
    width: 50%;
}

.col-7 {
    width: 58.33%;
}

.col-8 {
    width: 66.66%;
}

.col-9 {
    width: 75%;
}

.col-10 {
    width: 83.33%;
}

.col-11 {
    width: 91.66%;
}

.col-12 {
    width: 100%;
}

[class*="col-"] {
    float: left;
    /* padding: 15px; */
    padding: 16px 16px 16px 16px;
}

.row::after {
    content: "";
    clear: both;
    display: table;
}

.space-mt {
    margin-top: 0;
}

.space-2t {
    margin-top: 2%;
}

.space-5t {
    margin-top: 5%;
}


.space-5tb {
    margin: 5% 0;
}

.space-10b {
    margin-bottom: 10%;
}

.space-10t {
    margin-top: 10%;
}

.space-10tb {
    margin: 10% 0;
}

.space-15b {
    margin-bottom: 15%;
}



/* .section-bg-color-lgray{
    background:#eee;
    padding-top:5%;
 } */



.bg-lg {
    background: #E1E5EF
}

.bg-subtle-grey {
    background: #F6F6F6;
}

.bg-subtle-purple {
    background: #E1E5EF;
}

.inverse-text,
h2.inverse-text,
h3.inverse-text,
p.inverse-text {
    color: #E3E3E3
}

.container-work.bg-darkgrey {
    background: #595B6B
}

.with-bg-spacing {
    /* width: 80%; */
    margin: 0 auto;
    padding: 8% 0 8% 0;
}

.comp-video-area {
    border-bottom: 1px solid #E3E3E360;
    padding-bottom: 4%;
}


.border-rd {
    border-radius: 12px;
    overflow: hidden;
    transform: translateZ(0);
    /* Fixes video corner clipping in Safari */
}

.responsive-video {
    width: 100%;
    height: auto;
    display: block;
}

.video-frame {
    background-color: #E1E5EF;
    padding: 24px;
    /* border-radius: 12px; */
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.04);
    /* border: 1px solid rgba(0, 0, 0, 0.05); */
}

/* loading */
/* This only works with JavaScript, 
if it's not present, don't show loader */
.no-js #loader {
    display: none;
}

.js #loader {
    display: block;
    position: absolute;
    left: 100px;
    top: 0;
}

.se-pre-con {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    z-index: 9999;
    /* background: url(https://smallenvelop.com/wp-content/uploads/2014/08/Preloader_11.gif) center no-repeat #fff; */
    background: url(../img/loading.svg) center no-repeat #fff;
}

/***************** Go to top arrow *******************/
.go-top {
    position: fixed;
    bottom: 5%;
    right: 3%;
    padding: 20px;
    display: none;
    cursor: pointer;
    -webkit-font-smoothing: antialiased;
}

.bg-top {
    /* background-color: rgba(185, 203, 222, 0.6); */
    background: #E1E5EF;
    padding: 13px 15px;
    color: #888888;
    position: absolute;
    bottom: 10px;
    font-size: 18px;
    border-radius: 50%;
    box-shadow: 0 2px 8px 0 rgba(185, 203, 222, 0.4);
}

.go-top:hover {
    transition: all .4s linear;
    transform: scale(1.1);
}


/***************** HOME *******************/

header.name {
    /* margin-top: 200px; */
    margin-top: 18%;
}

h1.myname {
    font-family: 'Crimson Text', serif;
    font-size: 64px;
    letter-spacing: 8px;
    margin-bottom: 20px;
    font-weight: 500;
}

h2.title {
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    letter-spacing: 2px;
    /* text-transform:none; */
}

/***************** NAVIGATION *******************/
img.logo {
    width: 48px;
    float: left;
    position: relative;
    /* margin: 3%; */
}

.mobile-nav {
    padding-top: 5%;
}

nav ul li {
    list-style: none;
    display: inline-block;
    padding-right: 50px;
    letter-spacing: 3px;
}

nav ul li a {
    font-size: 16px;
    font-weight: 600;
}

nav ul li a:hover {
    color: #ad74ed;
}

.hamburgler-menu {
    display: none;
}

.clearfix {
    overflow: auto;
}

/* ul.nav-main{
        float: right;
} */
/* ... */

